--- a/.gitignore
+++ b/.gitignore
@@ -9,16 +9,17 @@ import {
   FormControlLabel,
   TextField,
   IconButton,
+  Typography,
+  Box,
 } from "@mui/material";
 import { ExpandMore, ChevronRight } from "@mui/icons-material";
 
-// Secure API Fetch Function with Axios
+// Secure API Fetch Function
 const fetchCSFScopeData = async () => {
   try {
     const response = await axios.get("/api/v1/GetCSFScopeData", {
       headers: { "Content-Type": "application/json" },
     });
-
     return Array.isArray(response.data) ? response.data : [];
   } catch (error) {
     console.error("Error fetching CSF Scope data:", error);
@@ -28,10 +29,10 @@ const fetchCSFScopeData = async () => {
 
 const CSFScopeTable = () => {
   const [tableData, setTableData] = useState([]);
-  const [expandedRows, setExpandedRows] = useState({}); // Track expanded/collapsed rows
+  const [expandedRows, setExpandedRows] = useState({});
   const [loading, setLoading] = useState(true);
 
-  // Fetch and format data
+  // Fetch data securely
   useEffect(() => {
     let isMounted = true;
     fetchCSFScopeData().then((data) => {
@@ -40,65 +41,37 @@ const CSFScopeTable = () => {
         setLoading(false);
       }
     });
-    return () => (isMounted = false); // Prevent memory leaks
+    return () => (isMounted = false);
   }, []);
 
-  // Normalize API response
-  const normalizeApiData = (data) => {
-    return data.map((item) => ({
-      subcategoryId: item.subcategoryId,
-      subcategoryName: item.subcategoryName,
-      relatedCsf1_1Subcategories: item.relatedCsf1_1Subcategories,
-      businessUnitAbbreviation: item.businessUnitAbbreviation,
-
-      // Auditor Fields
-      auditorIsInScope: item.auditorIsInScope ?? null,
-      auditorJustification: item.auditorJustification ?? null,
-      auditorProfileType: item.auditorProfileType ?? null,
-      auditorConsumingFromBusinessUnit: item.auditorConsumingFromBusinessUnit ?? null,
-
-      // Subcategory Owner Fields
-      subcatOwnerAcceptRecommendation: item.subcatOwnerAcceptRecommendation ?? null,
-      subcatOwnerIsInScope: item.subcatOwnerIsInScope ?? null,
-      subcatOwnerJustification: item.subcatOwnerJustification ?? null,
-      subcatOwnerProfileType: item.subcatOwnerProfileType ?? null,
-      subcatOwnerConsumingFromBusinessUnit: item.subcatOwnerConsumingFromBusinessUnit ?? null,
-    }));
-  };
-
-  // Memoized Data Processing (Prevents Unnecessary Recomputations)
-  const formatTableData = useMemo(() => (data) => {
-    const normalizedData = normalizeApiData(data);
+  // Transform API response into hierarchical data
+  const formatTableData = useCallback((data) => {
     const groupedData = [];
-
-    // Track added subcategories to prevent duplication
     const subcategoryMap = new Map();
 
-    normalizedData.forEach((item) => {
-      // Ensure each Subcategory is added only once
+    data.forEach((item) => {
       if (!subcategoryMap.has(item.subcategoryId)) {
         subcategoryMap.set(item.subcategoryId, {
           id: `subcat-${item.subcategoryId}`,
           subcategoryId: item.subcategoryId,
           subcategoryName: item.subcategoryName,
           relatedCsf1_1Subcategories: item.relatedCsf1_1Subcategories,
-          isGroup: true, // Flag for subcategory row
+          isGroup: true,
         });
       }
 
-      // Add Business Unit as a child row under its Subcategory
       groupedData.push({
         id: `bu-${item.subcategoryId}-${item.businessUnitAbbreviation}`,
-        parentId: `subcat-${item.subcategoryId}`, // Links to correct parent
+        parentId: `subcat-${item.subcategoryId}`,
         businessUnitAbbreviation: item.businessUnitAbbreviation,
 
-        // Auditor Data
+        // Auditor Fields
         auditorIsInScope: item.auditorIsInScope,
         auditorJustification: item.auditorJustification,
         auditorProfileType: item.auditorProfileType,
         auditorConsumingFromBusinessUnit: item.auditorConsumingFromBusinessUnit,
 
-        // Subcategory Owner Data
+        // Subcategory Owner Fields
         subcatOwnerAcceptRecommendation: item.subcatOwnerAcceptRecommendation,
         subcatOwnerIsInScope: item.subcatOwnerIsInScope,
         subcatOwnerJustification: item.subcatOwnerJustification,
@@ -107,11 +80,10 @@ const CSFScopeTable = () => {
       });
     });
 
-    // Combine Subcategory parents with their Business Unit children
     return [...subcategoryMap.values(), ...groupedData];
   }, []);
 
-  // Memoized Expand/Collapse Toggle Function
+  // Toggle row expansion
   const toggleRowExpansion = useCallback((subcatId) => {
     setExpandedRows((prev) => ({
       ...prev,
@@ -119,7 +91,7 @@ const CSFScopeTable = () => {
     }));
   }, []);
 
-  // Column Definitions (Memoized for Performance)
+  // Column Definitions
   const columns = useMemo(
     () => [
       {
@@ -129,12 +101,14 @@ const CSFScopeTable = () => {
         renderCell: (params) => {
           if (params.row.isGroup) {
             return (
-              <div style={{ fontWeight: "bold", display: "flex", alignItems: "center" }}>
+              <Box display="flex" alignItems="center">
                 <IconButton size="small" onClick={() => toggleRowExpansion(params.row.id)}>
                   {expandedRows[params.row.id] ? <ExpandMore /> : <ChevronRight />}
                 </IconButton>
-                {params.value}
-              </div>
+                <Typography variant="body1" fontWeight="bold">
+                  {params.value}
+                </Typography>
+              </Box>
             );
           }
           return null;
@@ -153,31 +127,61 @@ const CSFScopeTable = () => {
         headerName: "Auditor - In Scope?",
         width: 150,
         renderCell: (params) =>
-          !params.row.isGroup ? <Checkbox checked={params.value} onChange={() => {}} /> : null,
+          !params.row.isGroup ? (
+            <Checkbox checked={!!params.value} onChange={() => {}} />
+          ) : null,
       },
       { field: "auditorJustification", headerName: "Auditor - Justification", width: 250 },
+      {
+        field: "auditorProfileType",
+        headerName: "Auditor - Profile Type",
+        width: 200,
+        renderCell: (params) =>
+          !params.row.isGroup ? (
+            <FormControl variant="standard" fullWidth>
+              <Select defaultValue={params.value} onChange={() => {}}>
+                <MenuItem value="Provider">Provider</MenuItem>
+                <MenuItem value="Consumer">Consumer</MenuItem>
+                <MenuItem value="Inheritor">Inheritor</MenuItem>
+                <MenuItem value="Both">Both</MenuItem>
+              </Select>
+            </FormControl>
+          ) : null,
+      },
 
-      // Subcategory Owner Fields
+      // Subcategory Owner Fields (Only show if Accept Recommendation is No)
       {
         field: "subcatOwnerAcceptRecommendation",
         headerName: "Owner - Accept Recommendation?",
-        width: 180,
+        width: 200,
         renderCell: (params) =>
           !params.row.isGroup ? (
-            <FormControlLabel
-              control={<Checkbox checked={params.value} onChange={() => {}} />}
-              label=""
+            <Checkbox
+              checked={!!params.value}
+              onChange={(e) => {
+                params.row.subcatOwnerAcceptRecommendation = e.target.checked;
+              }}
             />
           ) : null,
       },
-      { field: "subcatOwnerJustification", headerName: "Owner - Justification", width: 250 },
+      {
+        field: "subcatOwnerJustification",
+        headerName: "Owner - Justification",
+        width: 250,
+        renderCell: (params) =>
+          !params.row.isGroup && params.row.subcatOwnerAcceptRecommendation === false ? (
+            <TextField variant="standard" fullWidth defaultValue={params.value} onChange={() => {}} />
+          ) : null,
+      },
     ],
     [expandedRows, toggleRowExpansion]
   );
 
   return (
     <div style={{ height: 600, width: "100%" }}>
-      <h2>CSF Scope Data</h2>
+      <Typography variant="h5" gutterBottom>
+        CSF Scope Data
+      </Typography>
       {loading ? (
         <p>Loading data...</p>
       ) : (
