--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-import React, { useState, useEffect, useCallback } from "react";
+import React, { useState, useEffect, useCallback, useMemo } from "react";
 import axios from "axios";
 import {
   Accordion,
@@ -9,6 +9,8 @@ import {
   MenuItem,
   Grid,
   TextField,
+  Autocomplete,
+  TextField as MUITextField,
 } from "@mui/material";
 import { ExpandMore } from "@mui/icons-material";
 import { DataGrid } from "@mui/x-data-grid";
@@ -28,6 +30,8 @@ const fetchCSFScopeData = async () => {
 
 const CSFScopeTable = () => {
   const [scopeData, setScopeData] = useState([]);
+  const [filteredSubcategories, setFilteredSubcategories] = useState([]);
+  const [selectedSubcategories, setSelectedSubcategories] = useState([]);
   const [expandedSubcategories, setExpandedSubcategories] = useState({});
   const [loading, setLoading] = useState(true);
 
@@ -35,14 +39,16 @@ const CSFScopeTable = () => {
     let isMounted = true;
     fetchCSFScopeData().then((data) => {
       if (isMounted) {
-        setScopeData(formatScopeData(data));
+        const formattedData = formatScopeData(data);
+        setScopeData(formattedData);
+        setFilteredSubcategories(formattedData); // Default: Show all subcategories
         setLoading(false);
       }
     });
     return () => (isMounted = false);
   }, []);
 
-  // ✅ Transform API response into grouped format for rendering
+  // ✅ Transform API response into grouped format
   const formatScopeData = useCallback((data) => {
     const groupedSubcategories = {};
     data.forEach((item) => {
@@ -65,6 +71,20 @@ const CSFScopeTable = () => {
     return Object.values(groupedSubcategories);
   }, []);
 
+  // ✅ Handle Multi-Select Filter for Subcategories
+  const handleSubcategoryFilter = (event, selectedOptions) => {
+    setSelectedSubcategories(selectedOptions);
+    if (selectedOptions.length === 0) {
+      setFilteredSubcategories(scopeData); // Show all if none selected
+    } else {
+      setFilteredSubcategories(
+        scopeData.filter((subcategory) =>
+          selectedOptions.includes(subcategory.subcategoryName)
+        )
+      );
+    }
+  };
+
   // ✅ Toggle Accordion Expansion
   const toggleAccordion = (subcategoryId) => {
     setExpandedSubcategories((prev) => ({
@@ -73,7 +93,7 @@ const CSFScopeTable = () => {
     }));
   };
 
-  // ✅ Columns for Business Unit DataGrid
+  // ✅ Business Unit DataGrid Columns
   const getBusinessUnitColumns = (businessUnits) => [
     { field: "businessUnitAbbreviation", headerName: "BU Abbr", width: 120 },
     { field: "auditorSubcatCustodian", headerName: "Auditor Custodian", width: 200 },
@@ -95,52 +115,6 @@ const CSFScopeTable = () => {
       ),
     },
     {
-      field: "auditorJustification",
-      headerName: "Justification",
-      width: 250,
-      renderCell: (params) =>
-        params.row.auditorIsInScope === "No" ? (
-          <TextField defaultValue={params.value} fullWidth variant="standard" />
-        ) : null,
-    },
-    {
-      field: "auditorProfileType",
-      headerName: "Auditor Profile",
-      width: 200,
-      renderCell: (params) => (
-        <FormControl fullWidth>
-          <Select
-            value={params.value || ""}
-            onChange={(e) => (params.row.auditorProfileType = e.target.value)}
-            variant="standard"
-          >
-            <MenuItem value="Provider">Provider</MenuItem>
-            <MenuItem value="Consumer">Consumer</MenuItem>
-            <MenuItem value="Inheritor">Inheritor</MenuItem>
-            <MenuItem value="Both">Both</MenuItem>
-          </Select>
-        </FormControl>
-      ),
-    },
-    {
-      field: "auditorConsumingFromBusinessUnit",
-      headerName: "Consuming From",
-      width: 180,
-      renderCell: (params) =>
-        params.row.auditorProfileType === "Consumer" ||
-        params.row.auditorProfileType === "Both" ? (
-          <FormControl fullWidth>
-            <Select defaultValue={params.value} variant="standard">
-              {businessUnits.map((bu) => (
-                <MenuItem key={bu.businessUnitAbbreviation} value={bu.businessUnitAbbreviation}>
-                  {bu.businessUnitAbbreviation}
-                </MenuItem>
-              ))}
-            </Select>
-          </FormControl>
-        ) : null,
-    },
-    {
       field: "subcatOwnerAcceptRecommendation",
       headerName: "Owner - Accept Recommendation?",
       width: 180,
@@ -148,7 +122,9 @@ const CSFScopeTable = () => {
         <FormControl fullWidth>
           <Select
             value={params.value || ""}
-            onChange={(e) => (params.row.subcatOwnerAcceptRecommendation = e.target.value)}
+            onChange={(e) =>
+              (params.row.subcatOwnerAcceptRecommendation = e.target.value)
+            }
             variant="standard"
           >
             <MenuItem value="Yes">Yes</MenuItem>
@@ -157,15 +133,6 @@ const CSFScopeTable = () => {
         </FormControl>
       ),
     },
-    {
-      field: "subcatOwnerJustification",
-      headerName: "Owner Justification",
-      width: 250,
-      renderCell: (params) =>
-        params.row.subcatOwnerAcceptRecommendation === "No" ? (
-          <TextField defaultValue={params.value} fullWidth variant="standard" />
-        ) : null,
-    },
   ];
 
   return (
@@ -173,25 +140,41 @@ const CSFScopeTable = () => {
       <Typography variant="h5" gutterBottom>
         CSF Scope Data
       </Typography>
+
+      {/* ✅ Multi-Select Filter for Subcategories */}
+      <Autocomplete
+        multiple
+        options={scopeData.map((subcat) => subcat.subcategoryName)}
+        value={selectedSubcategories}
+        onChange={handleSubcategoryFilter}
+        renderInput={(params) => (
+          <MUITextField
+            {...params}
+            variant="outlined"
+            label="Filter by Subcategory"
+            placeholder="Select Subcategories"
+          />
+        )}
+        style={{ marginBottom: "20px", width: "50%" }}
+      />
+
       {loading ? (
         <Typography>Loading data...</Typography>
       ) : (
-        scopeData.map((subcategory) => (
-          <Accordion
-            key={subcategory.id}
-            expanded={expandedSubcategories[subcategory.id]}
-            onChange={() => toggleAccordion(subcategory.id)}
-          >
+        filteredSubcategories.map((subcategory) => (
+          <Accordion key={subcategory.id} expanded={expandedSubcategories[subcategory.id]}>
             <AccordionSummary expandIcon={<ExpandMore />}>
-              <Grid container spacing={2} alignItems="center">
-                <Grid item xs={3}>
+              <Grid container spacing={2}>
+                <Grid item xs={4}>
                   <Typography variant="h6">{subcategory.subcategoryName}</Typography>
                 </Grid>
-                <Grid item xs={5}>
+                <Grid item xs={4}>
                   <Typography variant="body2">{subcategory.subcategoryDescription}</Typography>
                 </Grid>
                 <Grid item xs={4}>
-                  <Typography variant="body2"><b>Owner:</b> {subcategory.businessUnitOwner}</Typography>
+                  <Typography variant="body2">
+                    <b>Owner:</b> {subcategory.businessUnitOwner}
+                  </Typography>
                 </Grid>
               </Grid>
             </AccordionSummary>
@@ -200,7 +183,6 @@ const CSFScopeTable = () => {
               columns={getBusinessUnitColumns(subcategory.businessUnits)}
               pageSize={5}
               autoHeight
-              disableSelectionOnClick
             />
           </Accordion>
         ))
