--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,7 @@ const CSFScopeTable = () => {
   const handleSubcategoryFilter = (event, selectedOptions) => {
     setSelectedSubcategories(selectedOptions);
     if (selectedOptions.length === 0) {
-      setFilteredSubcategories(scopeData); // Show all if none selected
+      setFilteredSubcategories(scopeData);
     } else {
       setFilteredSubcategories(
         scopeData.filter((subcategory) =>
@@ -83,14 +83,6 @@ const CSFScopeTable = () => {
         )
       );
     }
-  };
-
-  // ✅ Toggle Accordion Expansion
-  const toggleAccordion = (subcategoryId) => {
-    setExpandedSubcategories((prev) => ({
-      ...prev,
-      [subcategoryId]: !prev[subcategoryId],
-    }));
   };
 
   // ✅ Business Unit DataGrid Columns
@@ -115,6 +107,15 @@ const CSFScopeTable = () => {
       ),
     },
     {
+      field: "auditorJustification",
+      headerName: "Justification",
+      width: 250,
+      renderCell: (params) =>
+        params.row.auditorIsInScope === "No" ? (
+          <TextField defaultValue={params.value} fullWidth variant="standard" />
+        ) : null,
+    },
+    {
       field: "subcatOwnerAcceptRecommendation",
       headerName: "Owner - Accept Recommendation?",
       width: 180,
@@ -122,9 +123,7 @@ const CSFScopeTable = () => {
         <FormControl fullWidth>
           <Select
             value={params.value || ""}
-            onChange={(e) =>
-              (params.row.subcatOwnerAcceptRecommendation = e.target.value)
-            }
+            onChange={(e) => (params.row.subcatOwnerAcceptRecommendation = e.target.value)}
             variant="standard"
           >
             <MenuItem value="Yes">Yes</MenuItem>
@@ -133,7 +132,32 @@ const CSFScopeTable = () => {
         </FormControl>
       ),
     },
-  ];
+    params.row.subcatOwnerAcceptRecommendation === "No" && {
+      field: "subcatOwnerIsInScope",
+      headerName: "Owner - In Scope?",
+      width: 150,
+      renderCell: (params) => (
+        <FormControl fullWidth>
+          <Select
+            value={params.value || ""}
+            onChange={(e) => (params.row.subcatOwnerIsInScope = e.target.value)}
+            variant="standard"
+          >
+            <MenuItem value="Yes">Yes</MenuItem>
+            <MenuItem value="No">No</MenuItem>
+          </Select>
+        </FormControl>
+      ),
+    },
+    params.row.subcatOwnerIsInScope === "No" && {
+      field: "subcatOwnerJustification",
+      headerName: "Owner Justification",
+      width: 250,
+      renderCell: (params) => (
+        <TextField defaultValue={params.value} fullWidth variant="standard" />
+      ),
+    },
+  ].filter(Boolean); // Removes undefined fields
 
   return (
     <div>
@@ -148,12 +172,7 @@ const CSFScopeTable = () => {
         value={selectedSubcategories}
         onChange={handleSubcategoryFilter}
         renderInput={(params) => (
-          <MUITextField
-            {...params}
-            variant="outlined"
-            label="Filter by Subcategory"
-            placeholder="Select Subcategories"
-          />
+          <MUITextField {...params} variant="outlined" label="Filter by Subcategory" />
         )}
         style={{ marginBottom: "20px", width: "50%" }}
       />
@@ -164,19 +183,7 @@ const CSFScopeTable = () => {
         filteredSubcategories.map((subcategory) => (
           <Accordion key={subcategory.id} expanded={expandedSubcategories[subcategory.id]}>
             <AccordionSummary expandIcon={<ExpandMore />}>
-              <Grid container spacing={2}>
-                <Grid item xs={4}>
-                  <Typography variant="h6">{subcategory.subcategoryName}</Typography>
-                </Grid>
-                <Grid item xs={4}>
-                  <Typography variant="body2">{subcategory.subcategoryDescription}</Typography>
-                </Grid>
-                <Grid item xs={4}>
-                  <Typography variant="body2">
-                    <b>Owner:</b> {subcategory.businessUnitOwner}
-                  </Typography>
-                </Grid>
-              </Grid>
+              <Typography variant="h6">{subcategory.subcategoryName}</Typography>
             </AccordionSummary>
             <DataGrid
               rows={subcategory.businessUnits}
