--- a/.gitignore
+++ b/.gitignore
@@ -1,201 +1,265 @@
-import React, { useState, useEffect, useCallback, useMemo } from "react";
+import React, { useState, useEffect } from "react";
 import axios from "axios";
 import {
-  Accordion,
-  AccordionSummary,
+  Card,
+  CardContent,
   Typography,
+  Button,
+  Collapse,
+  Grid,
   FormControl,
+  InputLabel,
   Select,
   MenuItem,
-  Grid,
   TextField,
-  Autocomplete,
-  TextField as MUITextField,
+  Switch,
+  FormControlLabel,
 } from "@mui/material";
-import { ExpandMore } from "@mui/icons-material";
-import { DataGrid } from "@mui/x-data-grid";
 
-// ✅ Fetch Data via Axios (Fast & Secure)
-const fetchCSFScopeData = async () => {
-  try {
-    const response = await axios.get("/api/v1/GetCSFScopeData", {
-      headers: { "Content-Type": "application/json" },
-    });
-    return Array.isArray(response.data) ? response.data : [];
-  } catch (error) {
-    console.error("Error fetching CSF Scope data:", error);
-    return [];
-  }
-};
-
-const CSFScopeTable = () => {
-  const [scopeData, setScopeData] = useState([]);
-  const [filteredSubcategories, setFilteredSubcategories] = useState([]);
-  const [selectedSubcategories, setSelectedSubcategories] = useState([]);
-  const [expandedSubcategories, setExpandedSubcategories] = useState({});
-  const [loading, setLoading] = useState(true);
+const ScopeManagement = () => {
+  const [data, setData] = useState([]);
+  const [expanded, setExpanded] = useState({});
 
   useEffect(() => {
-    let isMounted = true;
-    fetchCSFScopeData().then((data) => {
-      if (isMounted) {
-        const formattedData = formatScopeData(data);
-        setScopeData(formattedData);
-        setFilteredSubcategories(formattedData); // Default: Show all subcategories
-        setLoading(false);
-      }
-    });
-    return () => (isMounted = false);
+    axios
+      .get("/api/scope")
+      .then((response) => setData(response.data))
+      .catch((error) => console.error("Error fetching data:", error));
   }, []);
 
-  // ✅ Transform API response into grouped format
-  const formatScopeData = useCallback((data) => {
-    const groupedSubcategories = {};
-    data.forEach((item) => {
-      if (!groupedSubcategories[item.subcategoryId]) {
-        groupedSubcategories[item.subcategoryId] = {
-          id: `subcat-${item.subcategoryId}`,
-          subcategoryId: item.subcategoryId,
-          subcategoryName: item.subcategoryName,
-          subcategoryDescription: item.subcategoryDescription,
-          businessUnitOwner: item.businessUnitOwner,
-          businessUnits: [],
-        };
-      }
-      groupedSubcategories[item.subcategoryId].businessUnits.push({
-        ...item,
-        id: `${item.subcategoryId}-${item.businessUnitAbbreviation}`,
-      });
-    });
-
-    return Object.values(groupedSubcategories);
-  }, []);
-
-  // ✅ Handle Multi-Select Filter for Subcategories
-  const handleSubcategoryFilter = (event, selectedOptions) => {
-    setSelectedSubcategories(selectedOptions);
-    if (selectedOptions.length === 0) {
-      setFilteredSubcategories(scopeData);
-    } else {
-      setFilteredSubcategories(
-        scopeData.filter((subcategory) =>
-          selectedOptions.includes(subcategory.subcategoryName)
-        )
-      );
-    }
+  const handleExpandClick = (subcategoryId) => {
+    setExpanded((prev) => ({
+      ...prev,
+      [subcategoryId]: !prev[subcategoryId],
+    }));
   };
 
-  // ✅ Business Unit DataGrid Columns
-  const getBusinessUnitColumns = (businessUnits) => [
-    { field: "businessUnitAbbreviation", headerName: "BU Abbr", width: 120 },
-    { field: "auditorSubcatCustodian", headerName: "Auditor Custodian", width: 200 },
-    {
-      field: "auditorIsInScope",
-      headerName: "Auditor - In Scope?",
-      width: 150,
-      renderCell: (params) => (
-        <FormControl fullWidth>
-          <Select
-            value={params.value || ""}
-            onChange={(e) => (params.row.auditorIsInScope = e.target.value)}
-            variant="standard"
-          >
-            <MenuItem value="Yes">Yes</MenuItem>
-            <MenuItem value="No">No</MenuItem>
-          </Select>
-        </FormControl>
-      ),
-    },
-    {
-      field: "auditorJustification",
-      headerName: "Justification",
-      width: 250,
-      renderCell: (params) =>
-        params.row.auditorIsInScope === "No" ? (
-          <TextField defaultValue={params.value} fullWidth variant="standard" />
-        ) : null,
-    },
-    {
-      field: "subcatOwnerAcceptRecommendation",
-      headerName: "Owner - Accept Recommendation?",
-      width: 180,
-      renderCell: (params) => (
-        <FormControl fullWidth>
-          <Select
-            value={params.value || ""}
-            onChange={(e) => (params.row.subcatOwnerAcceptRecommendation = e.target.value)}
-            variant="standard"
-          >
-            <MenuItem value="Yes">Yes</MenuItem>
-            <MenuItem value="No">No</MenuItem>
-          </Select>
-        </FormControl>
-      ),
-    },
-    params.row.subcatOwnerAcceptRecommendation === "No" && {
-      field: "subcatOwnerIsInScope",
-      headerName: "Owner - In Scope?",
-      width: 150,
-      renderCell: (params) => (
-        <FormControl fullWidth>
-          <Select
-            value={params.value || ""}
-            onChange={(e) => (params.row.subcatOwnerIsInScope = e.target.value)}
-            variant="standard"
-          >
-            <MenuItem value="Yes">Yes</MenuItem>
-            <MenuItem value="No">No</MenuItem>
-          </Select>
-        </FormControl>
-      ),
-    },
-    params.row.subcatOwnerIsInScope === "No" && {
-      field: "subcatOwnerJustification",
-      headerName: "Owner Justification",
-      width: 250,
-      renderCell: (params) => (
-        <TextField defaultValue={params.value} fullWidth variant="standard" />
-      ),
-    },
-  ].filter(Boolean); // Removes undefined fields
+  const handleFieldChange = (index, field, value) => {
+    setData((prev) =>
+      prev.map((item, i) =>
+        i === index ? { ...item, [field]: value } : item
+      )
+    );
+  };
 
   return (
-    <div>
-      <Typography variant="h5" gutterBottom>
-        CSF Scope Data
-      </Typography>
+    <div style={{ padding: "20px" }}>
+      {data.reduce((acc, item) => {
+        if (!acc[item.subcategoryId]) {
+          acc[item.subcategoryId] = [];
+        }
+        acc[item.subcategoryId].push(item);
+        return acc;
+      }, {}) &&
+        Object.entries(
+          data.reduce((acc, item) => {
+            if (!acc[item.subcategoryId]) {
+              acc[item.subcategoryId] = [];
+            }
+            acc[item.subcategoryId].push(item);
+            return acc;
+          }, {})
+        ).map(([subcategoryId, items]) => (
+          <Card key={subcategoryId} sx={{ marginBottom: 2 }}>
+            <CardContent>
+              <Typography variant="h6">{items[0].subcategoryName}</Typography>
+              <Typography variant="body2" color="textSecondary">
+                {items[0].subcategoryDescription}
+              </Typography>
+              <Typography variant="body2">
+                Related: {items[0].relatedCsf1_1Subcategories}
+              </Typography>
+              <Button
+                onClick={() => handleExpandClick(subcategoryId)}
+                sx={{ marginTop: 1 }}
+              >
+                {expanded[subcategoryId] ? "Hide Details" : "Show Details"}
+              </Button>
+            </CardContent>
+            <Collapse in={expanded[subcategoryId]}>
+              <CardContent>
+                <Grid container spacing={2}>
+                  {items.map((item, index) => (
+                    <Grid item xs={12} key={index}>
+                      <Card variant="outlined">
+                        <CardContent>
+                          <Typography variant="subtitle1">
+                            {item.businessUnitAbbr} - {item.businessUnitOwner}
+                          </Typography>
 
-      {/* ✅ Multi-Select Filter for Subcategories */}
-      <Autocomplete
-        multiple
-        options={scopeData.map((subcat) => subcat.subcategoryName)}
-        value={selectedSubcategories}
-        onChange={handleSubcategoryFilter}
-        renderInput={(params) => (
-          <MUITextField {...params} variant="outlined" label="Filter by Subcategory" />
-        )}
-        style={{ marginBottom: "20px", width: "50%" }}
-      />
+                          {/* Auditor Fields */}
+                          <FormControl fullWidth margin="normal">
+                            <InputLabel>Custodian</InputLabel>
+                            <Select
+                              value={item.auditorSubcatCustodian || ""}
+                              onChange={(e) =>
+                                handleFieldChange(
+                                  index,
+                                  "auditorSubcatCustodian",
+                                  e.target.value
+                                )
+                              }
+                            >
+                              <MenuItem value="James Charles">
+                                James Charles
+                              </MenuItem>
+                            </Select>
+                          </FormControl>
 
-      {loading ? (
-        <Typography>Loading data...</Typography>
-      ) : (
-        filteredSubcategories.map((subcategory) => (
-          <Accordion key={subcategory.id} expanded={expandedSubcategories[subcategory.id]}>
-            <AccordionSummary expandIcon={<ExpandMore />}>
-              <Typography variant="h6">{subcategory.subcategoryName}</Typography>
-            </AccordionSummary>
-            <DataGrid
-              rows={subcategory.businessUnits}
-              columns={getBusinessUnitColumns(subcategory.businessUnits)}
-              pageSize={5}
-              autoHeight
-            />
-          </Accordion>
-        ))
-      )}
+                          <FormControlLabel
+                            control={
+                              <Switch
+                                checked={item.auditorIsInScope || false}
+                                onChange={(e) =>
+                                  handleFieldChange(
+                                    index,
+                                    "auditorIsInScope",
+                                    e.target.checked
+                                  )
+                                }
+                              />
+                            }
+                            label="In Scope?"
+                          />
+
+                          {!item.auditorIsInScope && (
+                            <TextField
+                              fullWidth
+                              margin="normal"
+                              label="Justification"
+                              value={item.auditorJustification || ""}
+                              onChange={(e) =>
+                                handleFieldChange(
+                                  index,
+                                  "auditorJustification",
+                                  e.target.value
+                                )
+                              }
+                            />
+                          )}
+
+                          <FormControl fullWidth margin="normal">
+                            <InputLabel>Profile Type</InputLabel>
+                            <Select
+                              value={item.auditorProfileType || ""}
+                              onChange={(e) =>
+                                handleFieldChange(
+                                  index,
+                                  "auditorProfileType",
+                                  e.target.value
+                                )
+                              }
+                            >
+                              <MenuItem value="Consumer">Consumer</MenuItem>
+                              <MenuItem value="Both">Both</MenuItem>
+                              <MenuItem value="Other">Other</MenuItem>
+                            </Select>
+                          </FormControl>
+
+                          {(item.auditorProfileType === "Consumer" ||
+                            item.auditorProfileType === "Both") && (
+                            <FormControl fullWidth margin="normal">
+                              <InputLabel>Consuming From</InputLabel>
+                              <Select
+                                value={item.auditorConsumingFromBusinessUnit || ""}
+                                onChange={(e) =>
+                                  handleFieldChange(
+                                    index,
+                                    "auditorConsumingFromBusinessUnit",
+                                    e.target.value
+                                  )
+                                }
+                              >
+                                {items.map((bu) => (
+                                  <MenuItem key={bu.businessUnitAbbr} value={bu.businessUnitAbbr}>
+                                    {bu.businessUnitAbbr}
+                                  </MenuItem>
+                                ))}
+                              </Select>
+                            </FormControl>
+                          )}
+
+                          {/* Subcategory Owner Fields */}
+                          <FormControlLabel
+                            control={
+                              <Switch
+                                checked={item.subcatOwnerAcceptRecommendation || false}
+                                onChange={(e) =>
+                                  handleFieldChange(
+                                    index,
+                                    "subcatOwnerAcceptRecommendation",
+                                    e.target.checked
+                                  )
+                                }
+                              />
+                            }
+                            label="Accept Recommendation?"
+                          />
+
+                          {!item.subcatOwnerAcceptRecommendation && (
+                            <>
+                              <FormControlLabel
+                                control={
+                                  <Switch
+                                    checked={item.subcatOwnerIsInScope || false}
+                                    onChange={(e) =>
+                                      handleFieldChange(
+                                        index,
+                                        "subcatOwnerIsInScope",
+                                        e.target.checked
+                                      )
+                                    }
+                                  />
+                                }
+                                label="Subcat Owner In Scope?"
+                              />
+
+                              {!item.subcatOwnerIsInScope && (
+                                <TextField
+                                  fullWidth
+                                  margin="normal"
+                                  label="Justification"
+                                  value={item.subcatOwnerJustification || ""}
+                                  onChange={(e) =>
+                                    handleFieldChange(
+                                      index,
+                                      "subcatOwnerJustification",
+                                      e.target.value
+                                    )
+                                  }
+                                />
+                              )}
+
+                              <FormControl fullWidth margin="normal">
+                                <InputLabel>Profile Type</InputLabel>
+                                <Select
+                                  value={item.subcatOwnerProfileType || ""}
+                                  onChange={(e) =>
+                                    handleFieldChange(
+                                      index,
+                                      "subcatOwnerProfileType",
+                                      e.target.value
+                                    )
+                                  }
+                                >
+                                  <MenuItem value="Consumer">Consumer</MenuItem>
+                                  <MenuItem value="Both">Both</MenuItem>
+                                  <MenuItem value="Other">Other</MenuItem>
+                                </Select>
+                              </FormControl>
+                            </>
+                          )}
+                        </CardContent>
+                      </Card>
+                    </Grid>
+                  ))}
+                </Grid>
+              </CardContent>
+            </Collapse>
+          </Card>
+        ))}
     </div>
   );
 };
 
-export default CSFScopeTable;
+export default ScopeManagement;
